--- a/.gitignore
+++ b/.gitignore
@@ -6,6 +6,9 @@ yarn-debug.log*
 yarn-error.log*
 /test/unit/coverage/
 /test/e2e/reports/
+/test/e2e/screenshots/
+/tests_output
+geckodriver.log
 selenium-debug.log
 
 # Editor directories and files
