--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -32,7 +32,7 @@ jobs:
          xrayCloud: "false"
          xrayBaseUrl: "https://asd-tangle.atlassian.net/"
          testFormat: "junit"
-         testPaths: "**/test/*.xml"
+         testPaths: "**/test/e2e/reports*.xml"
          testExecKey: "ESM-101"
          projectKey: "ESM"
 
