--- a/.gitignore
+++ b/.gitignore
@@ -7,7 +7,8 @@ yarn-error.log*
 /test/unit/coverage/
 /test/e2e/reports/
 /test/e2e/screenshots/
-/tests_output
+/test/e2e/screen-evidence/
+/test_output
 geckodriver.log
 selenium-debug.log
 
